# GAMES101

./: LICENSE  README.md
finalproject/opengl/: CMakeLists.txt  main.cpp
finalproject/opengl/glad/include/glad/: glad.h
finalproject/opengl/glad/src/: glad.c
hw0/: CMakeLists.txt  main.cpp
hw1/: .clang-format  CMakeLists.txt  Triangle.cpp  Triangle.hpp  justfile  main.cpp  rasterizer.cpp  rasterizer.hpp
hw2/: .clang-format  CMakeLists.txt  Triangle.cpp  Triangle.hpp  global.hpp  justfile  main.cpp  rasterizer.cpp  rasterizer.hpp
hw3/: CMakeLists.txt  Shader.hpp  Texture.hpp  main.cpp  rasterizer.cpp
hw4/: CMakeLists.txt  main.cpp
hw5/: CMakeLists.txt  Renderer.cpp  Triangle.hpp
hw5/output/: 09-01-2022 03-02-45.ppm  09-01-2022 03-06-46.ppm  09-01-2022 03-21-51.ppm  09-01-2022 03-40-03.ppm
hw6/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Renderer.cpp  SVH.cpp  SVH.hpp  Triangle.hpp
hw8/: CMakeLists.txt
hw8/src/: CMakeLists.txt
notes/: games101.md  hw1.md
raytracing/: .gitignore  CMakeLists.txt  Cargo.toml  justfile  main.cc
raytracing/src/: main.rs
raytracing/src/core/: file.rs  mod.rs
test/: MB1.cpp  MB2.cpp  Makefile  template.cpp
test/output/: mb2.ppm  template.ppm
